# bblock

./: .gitignore  CHANGELOG.md  Cargo.toml  PLANNED.md  README.md
.github/workflows/: check.yml  ci.yml
examples/: basic.rs  combined.rs  guarded.rs  io_readers.rs  journal.rs  migration.rs  zero_copy.rs
src/: crc.rs  lib.rs  xor.rs
src/checksum/: crc.rs  mod.rs  xor.rs
src/compress/: lzma2.rs  mod.rs
src/crypt/: aes.rs  chacha.rs  mod.rs
