[package]
name = "bblock"
version = "0.2.1"
edition = "2024"
authors = ["William Wu <williamwutq@gmail.com>", "Claude <claude@anthropic.com>"]
license = "MIT"
description = "Persistent checksummed blocks built on top of bstack"
readme = "README.md"
changelog = "CHANGELOG.md"
repository = "https://github.com/williamwutq/bblock"
documentation = "https://docs.rs/bblock"
keywords = ["checksum", "persistent", "file-backed", "database", "binary"]
include = ["src/**/*", "Cargo.toml", "README.md", "CHANGELOG.md", "LICENSE", "examples/**/*.rs", ".gitignore"]

[dependencies]
aes-gcm = "0.10.3"
bstack = { version = "0.2", features = ["alloc", "set", "guarded"] }
chacha20poly1305 = "0.10.1"
crc32fast = "1.5"

[dev-dependencies]
tempfile = "3"

